# olio-ohjelmointi

Teht1/: main.cpp
Teht2/Teht2/: CMakeLists.txt  game.cpp  game.h  main.cpp
Teht3/: CMakeLists.txt  Chef.cpp  Chef.h  Italianchef.cpp  Italianchef.h  main.cpp
Teht4/: Asiakas.cpp  Asiakas.h  CMakeLists.txt  Luottotili.cpp  Luottotili.h  Pankkitili.cpp  Pankkitili.h  main.cpp
Teht5/: CMakeLists.txt  Notifikaattori.cpp  Notifikaattori.h  Seuraaja.cpp  Seuraaja.h  main.cpp
Teht6/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
